# smart_home

smart_room/: main.py  pyproject.toml  requirements.txt
