[tool.poetry]
name = "smart-room"
version = "0.1.0"
description = ""
authors = ["Mubashar-Bashir <123990120+Mubashar-Bashir@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.39.0"
speechrecognition = "^3.11.0"
pyaudio = "^0.2.14"
emoji = "^2.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
